# popell_top100

./: .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  manage.py  pyproject.toml  sonar-project.properties  startup.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: docker_build.yml  test.yml
core/: admin.py  exceptions.py  forms.py  models.py  urls.py  views.py  widgets.py
core/migrations/: 0001_initial.py  0002_alter_artist_spotify_uri_alter_track_spotify_uri.py  0002_hitlist_description.py  0003_hitlistsettings.py  0004_hitlist_theme.py
core/models/: music.py  settings.py  tracks.py  voting.py
core/rest_api/: serializers.py  urls.py  views.py
core/services/: music.py  settings.py  tracks.py  voting.py
core/spotify/: domain.py  spotify.py
core/static/css/: base.css  carnaval.css  logo.css  vote.css  vote_submission.css
core/templates/: add_custom_song.html  add_custom_song_success.html  base.html  closed.html  index.html  view_vote_submission.html  vote.html
core/templates/dashboard/: base.html  index.html
core/templatetags/: core_extras.py
core/tests/: test_forms.py  test_views.py  utils.py
core/tests/models/: test_artist.py  test_track.py  test_vote_submission.py
core/tests/services/: test_settings.py  test_voting.py
core/tests/spotify/: test_domain.py  (+1 more)
core/views/: dashboard.py  mixins.py  voting.py
popell_top100/: asgi.py  prod_settings.py  settings.py  urls.py  wsgi.py
templates/: 400.html  403.html  404.html  500.html
templates/registration/: login.html
(+16 files in other folders)
